--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -20,6 +20,8 @@
                 <div class="line_menu"></div>
                 <a class="button_text" th:href="@{/option/4}">Irregular verbs</a>
                 <div class="line_menu"></div>
+                <a class="button_text" th:href="@{/option/5}">Mark`s dictionary</a>
+                <div class="line_menu"></div>
                 <a class="button_text" th:href="@{/option2}">Reset progress</a>
                 <div class="line_menu"></div>
                 <form th:action="@{/logout}" method="POST">
