--- a/src/main/resources/templates/learn.html
+++ b/src/main/resources/templates/learn.html
@@ -103,7 +103,7 @@
             <div class="repeat_button" th:id="next_button_div" style="display: none">
                 <input type="hidden" th:name="learnedField" th:value="${learnedField}+1">
                 <input type="hidden" th:name="repeatedField" th:value="${repeatedField}">
-                <input type="hidden" id="wrongChoice" th:name="wrongChoice" th:value="choice">
+                <input type="hidden" id="choiceStatus" th:name="choiceStatus" th:value="choice">
                 <input type="hidden" id="checkedInput" th:name="checkedInput" th:value="choice">
                 <button type="submit" id="next_button"
                         th:formaction="@{/learn/save/{wordId}(wordId = ${word.getId()})}">
